dsp-cli/tests/snapshots/project_list_snapshots__project_list_csv_empty_stderr.snap
---
source: tests/project_list_snapshots.rs
expression: stderr
---
[anonymous on https://api.test.dasch.swiss]
