dsp-cli/tests/snapshots/project_list_snapshots__project_list_csv_empty_stdout.snap
---
source: tests/project_list_snapshots.rs
expression: stdout
---
shortcode,shortname,longname,data_models,iri
