dsp-cli/tests/snapshots/project_list_snapshots__project_list_csv_stdout.snap
---
source: tests/project_list_snapshots.rs
expression: buf_to_string(&out_buf)
---
shortcode,shortname,longname,data_models,iri
0512,sandbox,,0,http://rdfh.ch/projects/Zc6F1hYpQ2kMe8Vn
0801,beol,Bernoulli-Euler Online,4,http://rdfh.ch/projects/Qt8K2mWbT0eHa1cZ
0820,incunabula,Basel Early Book Printing,1,http://rdfh.ch/projects/Hn5D0sJwR3uXf7Tb
0918,roud,Gustave Roud,2,http://rdfh.ch/projects/Lp3R9vNxS7iWd4Bg
