dsp-cli/tests/snapshots/project_list_snapshots__project_list_json_authenticated.snap
---
source: tests/project_list_snapshots.rs
expression: out
---
{"_meta":{"server":"https://api.test.dasch.swiss","auth":"authenticated as alice@example.com","exit_code":0},"data":[{"iri":"http://rdfh.ch/projects/Zc6F1hYpQ2kMe8Vn","shortcode":"0512","shortname":"sandbox","longname":null,"data_models":0},{"iri":"http://rdfh.ch/projects/Qt8K2mWbT0eHa1cZ","shortcode":"0801","shortname":"beol","longname":"Bernoulli-Euler Online","data_models":4},{"iri":"http://rdfh.ch/projects/Hn5D0sJwR3uXf7Tb","shortcode":"0820","shortname":"incunabula","longname":"Basel Early Book Printing","data_models":1},{"iri":"http://rdfh.ch/projects/Lp3R9vNxS7iWd4Bg","shortcode":"0918","shortname":"roud","longname":"Gustave Roud","data_models":2}]}
