dsp-cli/tests/snapshots/project_list_snapshots__project_list_json_empty.snap
---
source: tests/project_list_snapshots.rs
expression: out
---
{"_meta":{"server":"https://api.test.dasch.swiss","auth":"anonymous","exit_code":0},"data":[]}
