dsp-cli/tests/snapshots/project_list_snapshots__project_list_lines_stderr.snap
---
source: tests/project_list_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on https://api.test.dasch.swiss]
